Fix section alignment, add flex-wrap to grids, and position card images

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -353,24 +353,27 @@ main {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 body {
   width: 100%;
   height: 100%;
   background-color: #060606;
+  font-family: "Satoshi", sans-serif;
 }
 
 main {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 .Recent_searches {
   margin-top: 20px;
   padding-left: 20px;
   width: 100%;
-  height: 285px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -378,14 +381,13 @@ main {
 }
 
 .Recent_searches h3 {
-  color: #E0E0E0;
+  color: #e0e0e0;
   font-size: 20px;
   letter-spacing: 3%;
   font-weight: 700;
 }
 
 .artists_container {
-  height: 229px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -402,7 +404,7 @@ main {
 }
 
 .artists p {
-  color: #E0E0E0;
+  color: #e0e0e0;
   font-size: 14px;
   letter-spacing: 3%;
 }
@@ -454,7 +456,7 @@ main {
 .Black_Holes_card p {
   font-size: 14px;
   font-weight: 500;
-  color: #E0E0E0;
+  color: #e0e0e0;
   letter-spacing: 3%;
 }
 
@@ -462,6 +464,66 @@ main {
   font-size: 12px;
   letter-spacing: 3%;
   color: #898989;
+}
+
+.category_card h2 {
+  height: 40;
+  color: #e0e0e0;
+  font-size: 20px;
+  letter-spacing: 3%;
+  font-weight: 700;
+}
+
+.category_card h3 {
+  height: 40;
+  font-size: 18px;
+  letter-spacing: 3%;
+  font-weight: 500;
+  color: #e0e0e0;
+}
+
+.cards_grid {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 6px;
+}
+
+.category-card {
+  width: 170px;
+  height: 170px;
+  border-radius: 10px;
+  background-color: #1e3264;
+  position: relative;
+  overflow: hidden;
+}
+
+.category-name {
+  font-weight: 900;
+  font-size: 20px;
+  letter-spacing: 3%;
+  color: #ffffff;
+  width: 95px;
+  height: 54px;
+  top: 20px;
+  left: 20px;
+  position: absolute;
+}
+
+.card-image {
+  width: 104px;
+  height: 104px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.direction_icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=style.css.map */
