--- a/styles/scss/pages/_search.scss
+++ b/styles/scss/pages/_search.scss
@@ -1,114 +1,175 @@
+@use "../abstracts/mixins" as *;
+
+// @include flex-between($justify: space-between, $align: center)
+//  @include text-style($size: 14px, $color: #898989, $spacing: 3%)
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background-color: #060606;
+  width: 100%;
+  height: 100%;
+  background-color: #060606;
+  font-family: "Satoshi", sans-serif;
 }
 
 main {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .Recent_searches {
-    margin-top: 20px;
-    padding-left: 20px;
-    width: 100%;
-    height: 285px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 15px;
+  margin-top: 20px;
+  padding-left: 20px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
 }
 
 .Recent_searches h3 {
-    color: #E0E0E0;
-    font-size: 20px;
-    letter-spacing: 3%;
-    font-weight: 700;
+  color: #e0e0e0;
+  font-size: 20px;
+  letter-spacing: 3%;
+  font-weight: 700;
 }
 
 .artists_container {
-    height: 229px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .artists {
-    width: 169px;
-    height: 205px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  width: 169px;
+  height: 205px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .artists p {
-    color: #E0E0E0;
-    font-size: 14px;
-    letter-spacing: 3%;
+  color: #e0e0e0;
+  font-size: 14px;
+  letter-spacing: 3%;
 }
 
 .circled_img {
-    width: 169px;
-    height: 169px;
-    position: relative;
+  width: 169px;
+  height: 169px;
+  position: relative;
 }
 
 .daft_Punk {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 .icon_close,
 .icon_close_square {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    position: absolute;
-    top: -0.41px;
-    left: 129px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  top: -0.41px;
+  left: 129px;
 }
 
 .Black_Holes_card {
-    position: relative;
-    width: 170px;
-    height: 229px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  position: relative;
+  width: 170px;
+  height: 229px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .square_img {
-    width: 170px;
-    height: 170px;
-    padding-top: 8px;
+  width: 170px;
+  height: 170px;
+  padding-top: 8px;
 }
 
 .Black_Holes {
-    width: 100%;
-    height: 100%;
-    border-radius: 7px;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  position: relative;
 }
 
 .Black_Holes_card p {
-    font-size: 14px;
-    font-weight: 500;
-    color: #E0E0E0;
-    letter-spacing: 3%;
+  font-size: 14px;
+  font-weight: 500;
+  color: #e0e0e0;
+  letter-spacing: 3%;
 }
 
 .Black_Holes_card span {
-    font-size: 12px;
-    letter-spacing: 3%;
-    color: #898989;
+  font-size: 12px;
+  letter-spacing: 3%;
+  color: #898989;
+}
+.category_card h2 {
+  height: 40;
+
+  color: #e0e0e0;
+  font-size: 20px;
+  letter-spacing: 3%;
+  font-weight: 700;
+}
+.category_card h3 {
+  height: 40;
+  font-size: 18px;
+  letter-spacing: 3%;
+  font-weight: 500;
+  color: #e0e0e0;
+}
+.cards_grid {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 6px;
+}
+.category-card {
+  width: 170px;
+  height: 170px;
+  border-radius: 10px;
+  background-color: #1e3264;
+  position: relative;
+  overflow: hidden;
+}
+.category-name {
+  font-weight: 900;
+  font-size: 20px;
+  letter-spacing: 3%;
+  color: #ffffff;
+  width: 95px;
+  height: 54px;
+  top: 20px;
+  left: 20px;
+  position: absolute;
+}
+.card-image {
+  width: 104px;
+  height: 104px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.direction_icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
